Alteração de px para vw

--- a/public/index.html
+++ b/public/index.html
@@ -209,7 +209,7 @@
                     ...
                 </div>
                 <!-- If we need pagination -->
-                <div class="swiper-pagination"></div>
+                <div class="swiper-pagination" ></div>
 
                 <!-- If we need navigation buttons -->
                 <div class="swiper-button-prev"></div>
@@ -219,7 +219,28 @@
 
         </div>
     </section>
+    <!-- Negocio -->
+    <!-- IMPACTOS -->
+    <section>
+        <div class="impacto">
+            <p>Impactos de Falhas no <span>SCADA</span></p>
 
+            <div class="container-impacto">
+                <div>
+                    <h1>01</h1>
+                    <h1>Perdas Financeiras</h1>
+                </div>
+                <div>
+                    <h1>02</h1>
+                    <h1>Danos a Reputação</h1>
+                </div>
+                <div>
+                    <h1>03</h1>
+                    <h1>Riscos a Segurança</h1>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="assets/Scripts/index.js" defer></script>
 </body>
 
