Finalização do Footer

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
+    <link rel="icon" type="image/png" href="assets/images/logoOpticar.png">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
     <header>
         <div class="container">
             <div class="marca">
-                <img src="assets/images/Logo_Opticar.png" alt="">
+                <img src="assets/images/logoOpticar.png" alt="">
                 <span>OPTICAR</span>
             </div>
 
@@ -266,6 +267,65 @@
             </div>
         </div>
     </section>
+    <!-- IMPACTOS -->
+    <!-- CONTATO -->
+      <section>
+            <div class="contato">
+                <p>Juntos, criamos possibilidades, entre em contato:</p>
+
+                <form action="">
+                    <div class="input-box">
+                        <input type="text" required>
+                        <label>Nome:</label>
+                    </div>
+                    <div class="input-box">
+                        <input type="text" required>
+                        <label>Email:</label>
+                    </div>
+                    <div class="input-box">
+                        <textarea required></textarea>
+                        <label>Mensagem:</label>
+                    </div>
+                    <button>Enviar</button>
+                </form>
+            </div>
+      </section>
+    <!-- CONTATO -->
+    <!-- FOOTER -->
+     <section>
+        <div class="footer">
+            <div class="cima">
+                <div class="logo">
+                    <img src="assets/images/logoOpticar.png" alt="">
+                    <span>OPTICAR</span>
+                </div>
+                <div class="empresa">
+                    <span>Contatos:</span>
+                    <h6>opticar@contato.com</h6>
+                    <span>(11)94002-8922</span>
+                    <span>Todos os Direitos Reservados</span>
+                </div>
+            </div>
+            <div class="baixo">
+                <div>
+                    <span>Home</span>
+                    <span>Segmento</span>
+                    <span>Princípios</span>
+                </div>
+                <div>
+                    <span>Negócio</span>
+                    <span>Impactos</span>
+                    <span>Simulador</span>
+                </div>
+                <div>
+                    <span>Contato</span>
+                    <span>Sistema</span>
+                    <h6>Aplicação</h6>
+                </div>
+            </div>
+        </div>
+     </section>
+    <!-- FOOTER -->
     <script src="assets/Scripts/index.js" defer></script>
 </body>
 
