Estrutura Simulador, Header responsivo, levem o media querie dele como base para as outras sessoes do site

--- a/public/index.html
+++ b/public/index.html
@@ -221,7 +221,7 @@
         </div>
     </section>
     <!-- Negocio -->
-    <!-- IMPACTOS -->
+    <!-- Impactos -->
     <section>
         <div class="impacto">
             <p>Impactos de Falhas no <span>SCADA</span></p>
@@ -267,8 +267,18 @@
             </div>
         </div>
     </section>
-    <!-- IMPACTOS -->
-    <!-- CONTATO -->
+    <!-- Impactos -->
+    <!-- Simulador -->
+    <section>
+        <div class="simulador">
+            <p>Simulador</p>
+            <!-- textos em h6, o p de paragrafo usei para os titulos, se achar que o h6 da uma encorpada a mais no texto pode 
+             mudar para outro tag -->
+            <h6>Para calcular possíveis benefícios para seu negócio, preencha os seguintes campos: </h6>
+        </div>
+    </section>
+    <!-- Simulador -->
+    <!-- Contato -->
       <section>
             <div class="contato">
                 <p>Juntos, criamos possibilidades, entre em contato:</p>
@@ -290,8 +300,8 @@
                 </form>
             </div>
       </section>
-    <!-- CONTATO -->
-    <!-- FOOTER -->
+    <!-- contato -->
+    <!-- footer -->
      <section>
         <div class="footer">
             <div class="cima">
@@ -325,7 +335,7 @@
             </div>
         </div>
      </section>
-    <!-- FOOTER -->
+    <!-- footer -->
     <script src="assets/Scripts/index.js" defer></script>
 </body>
 
