--- a/public/login.html
+++ b/public/login.html
@@ -17,10 +17,14 @@
                 </div>
             <div class="upper-box">
                 <div class="div-input">
-                    <span class="span-label_login">E-mail:</span>
-                    <input type="text">
-                    <span class="span-label_login">Senha:</span>
-                    <input type="text">
+                    <div class="box-email">
+                        <span class="span-label_login">E-mail:</span>
+                        <input type="text">
+                    </div>
+                    <div class="box-senha">
+                        <span class="span-label_login">Senha:</span>
+                        <input type="password">
+                    </div>
                 </div>
             </div>
             <div class="bottom-box">
@@ -29,11 +33,14 @@
                                 <input type="checkbox" id="check-conectado">
                                 <label for="check-conectado">Mantenha-me conectado</label>
                             </div>
-                            <button class="btn-entrar">&#10004</button>
-                            <br>
-                            <span class="span-contatoLogin">
-                                Deseja se tornar um cliente? Entre em CONTATO conosco!
-                            </span>
+                            <div class="box-btn">
+                                <button class="btn-entrar">&#10004</button>
+                            </div>
+                            <div class="box-spanContato">
+                                <span class="span-contatoLogin">
+                                    Deseja se tornar um cliente? <br>Entre em <span style="color: #007BFF;">CONTATO</span> conosco!
+                                </span>
+                            </div>
                         </div>
                     </div>
                 </div>
