Alterando cor da maneira certa

--- a/public/login.html
+++ b/public/login.html
@@ -38,7 +38,8 @@
                             </div>
                             <div class="box-spanContato">
                                 <span class="span-contatoLogin">
-                                    Deseja se tornar um cliente? <br>Entre em <span style="color: #007BFF;">CONTATO</span> conosco!
+                                    Deseja se tornar um cliente? <br>Entre em <span class="
+                                    palavraContato">CONTATO</span> conosco!
                                 </span>
                             </div>
                         </div>
