--- a/public/login.html
+++ b/public/login.html
@@ -12,40 +12,52 @@
     <main class="main-login">
 
         <div class="container-login">
-                <div class="header-login">
-                    <span class="span-login">Login:</span>
-                </div>
-            <div class="upper-box">
-                <div class="div-input">
-                    <div class="box-email">
-                        <span class="span-label_login">E-mail:</span>
-                        <input type="text">
+            <div class="left-container">
+                <div class="left-box">
+
+                    <div class="header-login">
+                        <span class="span-login">Login:</span>
                     </div>
-                    <div class="box-senha">
-                        <span class="span-label_login">Senha:</span>
-                        <input type="password">
+                <div class="upper-box">
+                    <div class="div-input">
+                        <div class="box-email">
+                            <span class="span-label_login">E-mail:</span>
+                            <input type="text">
+                        </div>
+                        <div class="box-senha">
+                            <span class="span-label_login">Senha:</span>
+                            <input type="password">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="bottom-box">
-                <div class="bottom">
-                            <div class="div-texto">
-                                <input type="checkbox" id="check-conectado">
-                                <label for="check-conectado">Mantenha-me conectado</label>
-                            </div>
-                            <div class="box-btn">
-                                <button class="btn-entrar">&#10004</button>
-                            </div>
-                            <div class="box-spanContato">
-                                <span class="span-contatoLogin">
-                                    Deseja se tornar um cliente? <br>Entre em <span class="
-                                    palavraContato">CONTATO</span> conosco!
-                                </span>
+                <div class="bottom-box">
+                    <div class="bottom">
+                                <div class="div-texto">
+                                    <input type="checkbox" id="check-conectado">
+                                    <label for="check-conectado">Mantenha-me conectado</label>
+                                </div>
+                                <div class="box-btn">
+                                    <button class="btn-entrar">&#10004</button>
+                                </div>
+                                <div class="box-spanContato">
+                                    <span class="span-contatoLogin">
+                                        Deseja se tornar um cliente? <br>Entre em <span class="
+                                        palavraContato">CONTATO</span> conosco!
+                                    </span>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="right-container">
+                    <div class="container-imagem">
+                        <div class="box-logo"></div>
+                        <div class="box-nomeEmpresa"></div>
+                    </div>
+                </div>
+            </div>
         </div>
+
 
     </main>
 
