Tela de login para pc finalizada

--- a/public/login.html
+++ b/public/login.html
@@ -51,8 +51,10 @@
                 </div>
                 <div class="right-container">
                     <div class="container-imagem">
-                        <div class="box-logo"></div>
-                        <div class="box-nomeEmpresa"></div>
+                        <div class="box-logo">
+                            <img src="assets/images/logoOpticar.png" alt="logo da empresa">
+                        </div>
+                        <div class="box-nomeEmpresa">Opticar</div>
                     </div>
                 </div>
             </div>
