alteração de tamanho

--- a/public/dashMonitoramento.html
+++ b/public/dashMonitoramento.html
@@ -126,11 +126,11 @@
                 <div class="direita">
 
                     <div class="chart-container-disco">
-                        <h2><i class='bx bxs-save'style="border: solid 1px black; border-radius: 8px;"></i> Disco</h2>
+                        <h2><i class='bx bxs-save'style="border: solid 1px black; border-radius: 8px;"></i> Disco Em Uso</h2>
                         <canvas id="discoChart"></canvas>
                         <div id="id_valor-disc"></div>
 
-                        <div class="chart-wrapper">
+                        <div class="chart-wrapper-disco">
                             <div>
                                 <canvas id="discoChart-ler"></canvas>
                                 <div id="id_valor-ler-disco"></div>
