CSS parcial da tela de perfil

--- a/public/perfil.html
+++ b/public/perfil.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/styles/perfil.css">
     <link rel="Icon" type="img-png" href="./public/assets/images/logoOpticar.png">
     <title>Opticar - Perfil</title>
 </head>
@@ -57,7 +58,7 @@
     </div>
 
     <div class="info-funcionario">
-        <div class="box">
+        <div class="box-funcionario">
             <div class="nome-funcionario">
                     <h1>Funcionário Luciano Silva</h1>
             </div>
@@ -67,11 +68,21 @@
                         <h2>Informações do Funcionário</h2>
                     </div>
                     <div class="campos">
-                        <span>Nome</span> <span>Luciano Silva</span><br>
-                        <span>Email</span> <span>luciano@empresa.com</span><br>
-                        <span>Cargo</span> <span>Engenheiro da Manutenção</span><br>
-                        <span>CPF</span> <span>89776503028</span><br>
-                        <span>Data de Admissão</span> <span>05/04/21</span>
+                        <div class="campo">
+                            <span>Nome</span> <span>Luciano Silva</span>
+                        </div>
+                        <div class="campo">
+                            <span>Email</span> <span>luciano@empresa.com</span>
+                        </div>
+                        <div class="campo">
+                            <span>Cargo</span> <span>Engenheiro da Manutenção</span>
+                        </div>
+                        <div class="campo">
+                            <span>CPF</span> <span>89776503028</span>
+                        </div>
+                        <div class="campo">
+                            <span>Data de Admissão</span> <span>05/04/21</span>
+                        </div>
                     </div>
                 </div>
                 <div class="direita">
@@ -84,7 +95,7 @@
     </div>
 
     <div class="lista-alertas">
-        <div class="box">
+        <div class="box-alertas">
             <div class="texto">
                 <h1>Lista de Alertas</h1>
             </div>
@@ -126,7 +137,7 @@
     </div>
 
     <div class="lista-logs">
-        <div class="box">
+        <div class="box-logs">
             <div class="texto">
                 <h1>Lista de Logs</h1>
             </div>
